Work in progress...

--- a/Italian/main/Bluetooth.apk/res/values-it/strings.xml
+++ b/Italian/main/Bluetooth.apk/res/values-it/strings.xml
@@ -100,6 +100,40 @@
     <string name="transfer_menu_open">Apri</string>
     <string name="transfer_menu_clear">Cancella da elenco</string>
     <string name="transfer_clear_dlg_title">Cancella</string>
+    <string name="bluetooth_share_file_name">bluetooth_content_share</string>
+    <string name="sharedUserId" />
+    <string name="process" />
+    <string name="miui_transfer_history_title">Trasferimenti Bluetooth</string>
+    <string name="miui_transfer_inbound_title">Ricevuti</string>
+    <string name="miui_transfer_outbound_title">Inviati</string>
+    <string name="permlab_bluetoothMap">Access Bluetooth Message Access Profile provider.</string>
+    <string name="permdesc_bluetoothMap">"Consente all'applicazioneAllows the app to access the Bluetooth Message Access Profile content provider and use it send messages to MAP messages to clients.</string>
+    <string name="permlab_fm_receiver">access FM receiver</string>
+    <string name="permdesc_fm_receiver">Allows an application to access the FM receiver functions.</string>
+    <string name="bt_advanced_settings">Bluetooth Advanced Settings</string>
+    <string name="profile_hs_hfp">HS/HFP</string>
+    <string name="profile_description_hs_hfp">Headset/Handsfree Profile</string>
+    <string name="profile_a2dp">A2DP</string>
+    <string name="profile_description_a2dp">A2DP Profile</string>
+    <string name="profile_hid">HID Host</string>
+    <string name="profile_description_hid">Human Interface Device (Host) Profile</string>
+    <string name="profile_hdp">HDP</string>
+    <string name="profile_description_hdp">Health Devices Profile</string>
+    <string name="profile_pan">PAN</string>
+    <string name="profile_description_pan">Personal Area Network Profile</string>
+    <string name="profile_gatt">GATT</string>
+    <string name="profile_description_gatt">GATT/BLE Profile</string>
+    <string name="profile_sap">SAP</string>
+    <string name="profile_description_sap">SIM Access Profile</string>
+    <string name="profile_ftp">FTP</string>
+    <string name="profile_description_ftp">File Transfer (Server) Profile</string>
+    <string name="profile_mse">MAP</string>
+    <string name="profile_description_mse">Message Access Profile</string>
+    <string name="title_bt_mse_settings">Bluetooth MAP Advanced Settings</string>
+    <string name="map_provider_smsmms_name">Messaging</string>
+    <string name="map_datasource_sms_name">SMS</string>
+    <string name="map_datasource_mms_name">MMS</string>
+    <string name="map_datasource_smsmms_name">SMS and MMS</string>
     <string name="pbap_session_key_dialog_title">Digita la chiave di sessione per %1$s</string>
     <string name="pbap_session_key_dialog_header">Chiave sessione Bluetooth necessaria</string>
     <string name="pbap_acceptance_timeout_message">"Timeout dell'accettazione della connessione con %1$s"</string>
@@ -121,15 +155,4 @@
     <string name="delete_record">Elimina record</string>
     <string name="start_server">Avvia server TCP</string>
     <string name="notify_server">Invia notifica al server TCP</string>
-    <string name="map_session_key_dialog_title">Digita la chiave di sessione per %1$s</string>
-    <string name="map_session_key_dialog_header">Chiave sessione Bluetooth necessaria</string>
-    <string name="map_acceptance_timeout_message">"Timeout per l'accettazione della connessione con %1$s"</string>
-    <string name="map_authentication_timeout_message">"Timeout dell'ingresso della chiave di sessione con %1$s"</string>
-    <string name="map_auth_notif_ticker">Richiesta di autenticazione Obex</string>
-    <string name="map_auth_notif_title">Chiave sessione</string>
-    <string name="map_auth_notif_message">Digita la chiave di sessione per %1$s</string>
-    <string name="map_defaultname">Kit auto</string>
-    <string name="map_unknownName">Nome sconosciuto</string>
-    <string name="map_localPhoneName">Il mio nome</string>
-    <string name="map_defaultnumber">000000</string>
 </resources>
