--- a/Italian/main/ApplicationsProvider.apk/res/values-it/strings.xml
+++ b/Italian/main/ApplicationsProvider.apk/res/values-it/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_label">1Ricerca Provider Applicazioni</string>
+    <string name="app_label">Ricerca Provider Applicazioni</string>
     <string name="search_label">Apps</string>
     <string name="application_desc">Applicazioni</string>
     <string name="settings_description">Applicazioni installate</string>
