--- a/Italian/main/MiuiHome.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiHome.apk/res/values-it/strings.xml
@@ -10,13 +10,18 @@
     <string name="chooser_wallpaper">Scegli sfondo da</string>
     <string name="activity_not_found">Applicazione non installata sul telefono.</string>
     <string name="cancel_action">Annulla</string>
-    <string name="bad_wallpaper_source_prompt">Impossibile caricare sfondo</string>
     <string name="apply_as_lock_wallpaper">Applica</string>
     <string name="apply_as_lock_wallpaper_message">Applicare questo sfondo anche alla lockscreen?</string>
     <string name="lock_screen_failed_message">Impossibile applicare</string>
     <string name="lock_screen_success_message">Applicato</string>
+    <string name="current_wallpaper">Attuale</string>
+    <string name="menu_item_add_item">Inserire nella schermata home</string>
+    <string name="group_shortcuts">Scorciatoie</string>
+    <string name="group_folder">Nuova cartella</string>
+    <string name="group_live_folders">Cartelle</string>
     <string name="out_of_space">Spazio esaurito in questa home</string>
     <string name="title_select_shortcut">Seleziona collegamento</string>
+    <string name="title_select_live_folder">Seleziona cartella</string>
     <string name="menu_add">Aggiungi</string>
     <string name="menu_wallpaper">Sfondo</string>
     <string name="menu_search">Cerca</string>
@@ -47,21 +52,33 @@
     <string name="menu_sort">Ordina icone desktop</string>
     <string name="menu_launcher_setting">Launcher</string>
     <string name="editing_tips">Modifica home</string>
+    <string name="editing_mode_title_empty">Seleziona selezionati</string>
     <string name="multi_selecting_tips">"Tocca un'icona per iniziare"</string>
     <string name="editing_add_widget_tips">Aggiungi widget</string>
     <string name="editing_set_wallpaper_tips">Cambia sfondo</string>
     <string name="editing_set_transition_effect_tips">Cambia gli effetti di transizione</string>
+    <string name="cant_remove_system_app">"Impossibile rimuovere l'applicazione di sistema"</string>
+    <string name="cant_remove_retained_app">Impossibile rimuovere questa applicazione</string>
     <string name="uninstall_dialog_message">La disinstallazione rimuoverà tutti i dati</string>
     <string name="uninstall_dialog_title_format">Disinstalla applicazione \"%s\"?</string>
     <string name="uninstall">Disinstalla</string>
     <string name="starting_preset_app">Inizio...</string>
     <string name="install">Installa</string>
+    <string name="cant_remove_folder">Non puoi rimuovere questa cartella</string>
     <string name="failed_to_drop">Spostamento fallito.</string>
     <string name="failed_to_drop_widget_nospace">Spostamento fallito, spazio non sufficiente!</string>
     <string name="failed_to_drop_widget_invalid">Inserimento non valido.</string>
     <string name="failed_to_delete_temporary">Eliminazione fallita, provare di nuovo.</string>
+    <string name="widget_favorite_contacts_label">Contatti preferiti</string>
+    <string name="widget_favorite_contacts_edit">Modifica</string>
+    <string name="widget_favorite_contacts_style">Cambia grandezza</string>
+    <string name="edit_folder_title">Modifica nome cartella</string>
     <string name="confirm_btn_label">OK</string>
     <string name="cancel_btn_label">Annulla</string>
+    <string name="sort_by_not_defined">Ordinamento automatico</string>
+    <string name="sort_by_frequency">Ordina per utilizzo</string>
+    <string name="sort_by_abc">Ordina per nome</string>
+    <string name="encryption">Crittografia</string>
     <string name="default_folder_title_tools">Strumenti</string>
     <string name="default_folder_title_recommend">Preferiti</string>
     <string name="default_folder_title_game">Giochi</string>
@@ -73,16 +90,27 @@
     <string name="preferences_general_title">Impostazioni Generali</string>
     <string name="pref_keep_in_memory_title">Mantieni in memoria</string>
     <string name="pref_keep_in_memory_summary">Mantieni applicazione in memoria, in questo modo non verrà terminata.</string>
+    <string name="pref_render_in_truecolor_title">Grafica di alta qualitù</string>
+    <string name="pref_render_in_truecolor_summary">Turning off this feature will improve drawing performance</string>   
     <string name="pref_enable_drawing_cache_title">Utilizzo Cache</string>
     <string name="pref_enable_drawing_cache_summary">Disattiva per liberare memoria, causerà delle latenze</string>
     <string name="pref_icon_shadow_title">Ombra icone</string>
     <string name="pref_icon_shadow_summary">Abilita e disabilita le ombre delle icone sul desktop</string>
     <string name="pref_screen_transformation_type_title">Effetti Transizione</string>
+    <string name="transformation_type_classic">Scorrimento classico</string>
+    <string name="transformation_type_classic_no_overshoot">Scorrimento classico (senza rimbalzo)</string>
+    <string name="transformation_type_crossfade">Dissolvenza</string>
+    <string name="transformation_type_falldown">Inclinazione</string>
+    <string name="transformation_type_cube">Cubo</string>
+    <string name="transformation_type_leftpage">Pagina</string>
+    <string name="transformation_type_stack">Cascata</string>
+    <string name="transformation_type_rotate">Rotazione</string>
     <string name="pref_wallpaper_scroll_type_title">Scorrimento sfondo</string>
     <string name="pref_cell_layout_size">Vista a griglia</string>
     <string name="pref_keep_layout_title">"Mantieni l'attuale layout"</string>
     <string name="pref_keep_layout_summary">Cambiando il layout delle icone si potrebbe modificare il layout della home.</string>
     <string name="widget_gadget_player">Musica</string>
+    <string name="buffering">Buffering in corso…</string>
     <string name="emptyplaylist">Playlist vuota</string>
     <string name="unknown_artist_name">Artista sconosciuto</string>
     <string name="gadget_search_label">Ricerca</string>
@@ -98,8 +126,10 @@
     <string name="gadget_photo_22_label">Cornice 2x2</string>
     <string name="gadget_photo_24_label">Cornice 2x4</string>
     <string name="gadget_google_search_label">Ricerca Google</string>
+    <string name="gadget_mtz_label">MiGadget</string>
     <string name="gadget_load_error">Errore caricamento widget...</string>
     <string name="invalid_contact_shortcut">Collegamento non valido</string>
+    <string name="guide_tips_editing_mode">Tocca e tieni premuto per prendere un widget</string>
     <string name="durationformatshort">%2$2d:%5$02d</string>
     <string name="durationformatshort_padding_with_0">%2$02d:%5$02d</string>
     <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
@@ -110,10 +140,17 @@
     <string name="photo_load_failed">Impossibile caricare foto!</string>
     <string name="frame_load_failed">Impossibile caricare il widget Cornice!</string>
     <string name="gadget_weather_loading">Nessun dato meteo</string>
+    <string name="gadget_weather_title">Weather</string>
     <string name="gadget_weather_title">Meteo</string>
     <string name="gadget_weather_title_24">Meteo 2X4</string>
     <string name="gadget_weather_app_not_installed">Installa MIUI Weather</string>
     <string name="gadget_weather_time_format">dd/MM EEE</string>
+    <string name="gadget_weather_theme_type">Tipo gadget</string>
+    <string name="gadget_weather_download_title">Download</string>
+    <string name="gadget_weather_download_message">"Tu hai bisogno di scaricare i seguenti contenuti: %1$s (%2$s). Riavviare l'applicazione dopo che i contenuti sono stati scaricati."</string>
+    <string name="gadget_weather_download_start">Download</string>
+    <string name="gadget_weather_downloading">"Il contenuto si sta scaricando. Riavvia l'applicazione una volta completato il download."</string>
+    <string name="gadget_weather_low_temp">Bassa temperatura</string>
     <string name="gadget_weather_aqi_title">Qualità aria</string>
     <string name="aqi_quality_index_good">Buona</string>
     <string name="aqi_quality_index_moderate">Discreta</string>
@@ -122,9 +159,12 @@
     <string name="aqi_quality_index_dangerous">Pericolosa</string>
     <string name="aqi_quality_index_hazardous">Rischiosa</string>
     <string name="free_style_apps_title">"Seleziona un'applicazione"</string>
+    <string name="free_style_edit_bottom_empty_tip">Premi il rettangolo da modificare</string>
     <string name="free_style_edit_bar_empty">Vuoto</string>
     <string name="free_style_enter_tip">Scorri in basso con due dita per passare a MiSpace</string>
+    <string name="free_style_enter_tip">Scorri in basso con due dita per entrare nel MiSpace</string>
     <string name="free_style_exit_tip">Scorri in alto con due dita per uscire da MiSpace</string>
+    <string name="free_style_londing_text">Caricamento in corso…</string>
     <string name="toggle_select_title">Seleziona comando</string>
     <string name="toggle_title">Comando</string>
     <string name="settings_shortcut">Impostazioni collegamenti</string>
